# linq-cpp

./: .gitmodules  .travis.yaml  .travis.yml  CMakeConfiguration.md  LICENSE.txt  README-BUILD.md  README-CMake.md  README.md  build-status.md  how-to-build.md  reading-material.md  v2-design.md
src/: CMakeLists.txt
src/linqcpp/: CMakeLists.txt
src/linqcpp/TestProgram/: CMakeLists.txt  ProgramUtils.cpp  main.cpp
src/linqcpp/Utils/: CMakeLists.txt  ProgramUtils.cpp  ProgramUtils.h  dllapi.h
src/linqcpp/linq/: CMakeLists.txt  Comparer.cpp  Comparer.h  Enumerable.cpp  Enumerable.h  Functional.cpp  Functional.h  PairingHeap.cpp  PairingHeap.h  captured_enumerable.h  captured_enumerator.h  concat.h  concat_enumerable.h  concat_enumerator.h  concat_traits.h  counter_predicate.h  dllapi.h  dynamic_concat.h  empty_enumerable.h  empty_enumerator.h  enumerable.h  enumerator.h  factory_enumerable.h  for_enumerable.h  for_enumerator.h  from_enumerable.h  from_enumerator.h  generate_enumerable.h  generate_enumerator.h  interactive.h  iota_enumerable.h  iota_enumerator.h  make_unique.h  memoize_enumerable.h  memoize_enumerator.h  memoize_traits.h  merge_enumerable.h  merge_enumerator.h  negated_predicate.h  optional.h  (+17 more)
